Fix overflow on detail screen of extension

--- a/FrontEnd/src/components/css/style.css
+++ b/FrontEnd/src/components/css/style.css
@@ -19,3 +19,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.table {
+    table-layout: fixed;
+}
+
+.table__url {
+    word-wrap: break-word;
+    word-break: break-all;
+}
